# lifespan

./: .gitignore  .gitmodules  README  README.md  build.sh  external_libraries.tar.bz2  ns_install_startup_script.sh  ns_install_web_interface.sh  ns_install_website.sh  ns_wcon.h  ns_wcon_rich_data_record.h
external_compile_libraries/sane-backends-1.0.27/: Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  libtool  ltmain.sh
external_compile_libraries/wcon_cpp/: CMakeLists.txt  ns_wcon_rich_data_record.h  ns_wcon_test.cpp
ns_image_server/: .gitignore  Makefile.am  Makefile.in  bootstrap.sh  config.h  config.h.in  configure  configure.ac  install-sh  missing
ns_image_server/data_annotation/: ns_annotation_handling_for_visualization.h  ns_death_time_annotation.cpp  ns_death_time_annotation.cpp.bak  ns_death_time_annotation.h  ns_death_time_annotation.h.bak  ns_death_time_annotation_set.h  ns_experiment_storyboard.cpp  ns_experiment_storyboard.h  ns_machine_learning_training_set.cpp  ns_machine_learning_training_set.h  ns_mask_management.cpp  ns_mask_management.h  ns_region_metadata.h  ns_worm_morphology_data_integrator.h
ns_image_server/image_acquisition/: ns_asynchronous_read.h  ns_barcode.cpp  ns_barcode.h  ns_barcode_old_dmtx_version.cpp  ns_buffered_capture_scheduler.cpp  ns_buffered_capture_scheduler.h  ns_capture_device.cpp  ns_capture_device.h  ns_capture_device_manager.cpp  ns_capture_device_manager.h  ns_capture_schedule.cpp  ns_capture_schedule.h  ns_captured_image_statistics_set.cpp  ns_captured_image_statistics_set.h  ns_difference_thresholder.cpp  ns_image_cache.h  ns_image_capture_data_manager.cpp  ns_image_capture_data_manager.h  ns_image_server_alerts.cpp  ns_image_server_alerts.h  ns_image_server_automated_job_scheduler.h  ns_image_server_dispatcher.cpp  ns_image_server_dispatcher.h  ns_process_16_bit_images.h  ns_usb.cpp  ns_usb.h
ns_image_server/image_base/: ns_buffered_random_access_image.h  ns_font.cpp  ns_font.h  ns_image.cpp  ns_image.h  ns_image_easy_io.h  ns_image_easy_io.h.bak  ns_image_pool.h  ns_image_socket.cpp  ns_image_socket.h  ns_image_tools.cpp  ns_image_tools.h  ns_jpeg.cpp  ns_jpeg.h  ns_libtiff_interface.c  ns_libtiff_interface.h  ns_ojp2k.cpp  ns_ojp2k.h  ns_svg.cpp  ns_svg.h  ns_tiff.cpp  ns_tiff.h  ns_vector.cpp  ns_vector.h  ns_vector_bitmap_interface.cpp  ns_vector_bitmap_interface.h  ns_xmp_encoder.h  xs_Config.h  xs_Float.h
ns_image_server/image_processing/: ns_bspline.cpp  ns_bspline.h  ns_complex_segment_cluster_solver.cpp  ns_complex_segment_cluster_solver.h  ns_detected_object.h  ns_detected_worm_info.cpp  ns_detected_worm_info.cpp.bak  ns_detected_worm_info.h  ns_detected_worm_info.h.bak  ns_difference_thresholder.h  ns_experiment_surival_data_cache.h  ns_gaussian_pyramid.h  ns_heat_map_interpolation.cpp  ns_heat_map_interpolation.h  ns_identify_contiguous_bitmap_regions.cpp  ns_identify_contiguous_bitmap_regions.h  ns_image_processing_pipeline.cpp  ns_image_processing_pipeline.h  ns_image_registration.h  ns_image_registration_cache.cpp  ns_image_registration_cache.h  ns_image_tools.h  ns_mask_management.cpp  ns_mask_management.h  ns_movement_visualization_generator.cpp  ns_movement_visualization_generator.h  ns_node_topology.cpp  ns_node_topology.h  ns_node_topology_primitives.h  ns_optical_flow.cpp  ns_optical_flow.h  ns_optical_flow_quantification.h  ns_process_16_bit_images.h  ns_process_mask_regions.h  ns_region_growing_segmenter.h  ns_resampler.h  ns_segment_topology.cpp  ns_segment_topology.h  ns_spatial_avg.cpp  ns_spatial_avg.h  (+18 more)
ns_image_server/image_server/: image_server_db_schema.sql.h  ns_file_location_specification.h  ns_get_double.h  ns_graph.cpp  ns_graph.h  ns_hand_annotation_loader.h  ns_high_precision_timer.h  ns_image_server.cpp  ns_image_server.h  ns_image_server_images.cpp  ns_image_server_images.h  ns_image_server_main.cpp  ns_image_server_message.cpp  ns_image_server_message.h  ns_image_server_results_storage.h  ns_image_server_sql.h  ns_image_server_stock_quotes.h  ns_image_simple_cache.h  ns_image_statistics.cpp  ns_image_statistics.h  ns_image_storage.h  ns_image_storage_handler.cpp  ns_image_storage_handler.h  ns_image_stream_buffers.h  ns_ini.cpp  ns_ini.h  ns_iostream.h  ns_performance_statistics.h  ns_progress_reporter.h  ns_simple_cache.cpp  ns_simple_cache.h  ns_simple_image_cache.h  ns_single_thread_coordinator.h  ns_sql_table_lock_manager.cpp  ns_sql_table_lock_manager.h  ns_thread_pool.h  stdafx.cpp  stdafx.h
ns_image_server/job_scheduling/: ns_image_processing_pipeline.cpp  ns_image_processing_pipeline.h  ns_processing_job.h  ns_processing_job_processor.cpp  ns_processing_job_processor.h  ns_processing_job_pull_scheduler.h  ns_processing_job_push_scheduler.cpp  ns_processing_job_push_scheduler.h  ns_processing_job_scheduler.cpp  ns_processing_job_scheduler.h  ns_processing_tasks.h
ns_image_server/m4/: ax_pthread.m4
ns_image_server/movement_analysis/: ns_analyze_movement_over_time.cpp  ns_analyze_movement_over_time.h  ns_analyzed_image_time_path_element_measurements.h  ns_experiment_storyboard.cpp  ns_experiment_storyboard.h  ns_hidden_markov_model.h  ns_hidden_markov_model_posture_analyzer.cpp  ns_hidden_markov_model_posture_analyzer.h  ns_image_server_time_path_inferred_worm_aggregator.h  ns_machine_analysis_data_loader.cpp  ns_machine_analysis_data_loader.h  ns_machine_learning_training_set.cpp  ns_machine_learning_training_set.h  ns_movement_measurement.cpp  ns_movement_measurement.h  ns_posture_analysis_cross_validation.cpp  ns_posture_analysis_cross_validation.h  ns_probability_model_measurement_accessor.h  ns_threshold_and_hmm_posture_analyzer.h  ns_threshold_movement_posture_analyzer.h  ns_time_path_image_analyzer.cpp  ns_time_path_image_analyzer.cpp.bak  ns_time_path_image_analyzer.h  ns_time_path_posture_movement_solution.h  ns_time_path_solver.cpp  ns_time_path_solver.cpp.bak  ns_time_path_solver.h  ns_time_path_solver_parameters.h
ns_image_server/statistics/: ns_by_hand_lifespan.h  ns_captured_image_statistics_set.cpp  (+19 more)
(+1138 files in other folders)
