AUTOMAKE_OPTIONS = subdir-objects
src_base = image_server/ns_file_location_specification.h \
		image_server/ns_ini.h \
		image_server/ns_image_statistics.cpp \
		image_server/ns_image_storage_handler.cpp \
		image_server/ns_image_storage_handler.h \
		image_server/ns_single_thread_coordinator.h \
		image_server/ns_progress_reporter.h \
		image_server/ns_simple_image_cache.h \
		image_server/ns_image_stream_buffers.h \
		image_server/ns_image_server.h \
		image_server/ns_image_server_message.cpp \
		image_server/ns_image_server_message.h \
		image_server/ns_image_server_stock_quotes.h \
		image_server/ns_get_double.h \
		image_server/ns_image_storage.h \
		image_server/ns_performance_statistics.h \
		image_server/ns_high_precision_timer.h \
		image_server/ns_hand_annotation_loader.h \
		image_server/ns_image_simple_cache.h \
		image_server/ns_graph.h \
		image_server/ns_ini.cpp \
		image_server/ns_image_server.cpp \
		image_server/ns_image_server_sql.h \
		image_server/ns_image_server_images.h \
		image_server/ns_image_server_results_storage.h \
		image_server/ns_image_statistics.h \
		image_server/ns_graph.cpp \
		image_server/ns_image_server_images.cpp 
src_data_annotation = data_annotation/ns_experiment_storyboard.cpp \
		      data_annotation/ns_death_time_annotation.h \
		      data_annotation/ns_mask_management.cpp \
		      data_annotation/ns_death_time_annotation.cpp \
		      data_annotation/ns_machine_learning_training_set.h \
		      data_annotation/ns_death_time_annotation_set.h \
		      data_annotation/ns_region_metadata.h \
		      data_annotation/ns_mask_management.h \
		      data_annotation/ns_machine_learning_training_set.cpp \
		      data_annotation/ns_experiment_storyboard.h
src_image_acquisition = image_acquisition/ns_usb.cpp \
			image_acquisition/ns_image_capture_data_manager.cpp \
			image_acquisition/ns_captured_image_statistics_set.h \
			image_acquisition/ns_asynchronous_read.h \
			image_acquisition/ns_buffered_capture_scheduler.h \
			image_acquisition/ns_image_server_dispatcher.h \
			image_acquisition/ns_capture_device_manager.cpp \
			image_acquisition/ns_barcode.cpp \
			image_acquisition/ns_image_cache.h \
			image_acquisition/ns_image_capture_data_manager.h \
			image_acquisition/ns_capture_device.h \
			image_acquisition/ns_image_server_dispatcher.cpp \
			image_acquisition/ns_capture_device.cpp \
			image_acquisition/ns_image_server_automated_job_scheduler.h \
			image_acquisition/ns_capture_device_manager.h \
			image_acquisition/ns_image_server_alerts.h \
			image_acquisition/ns_capture_schedule.h \
			image_acquisition/ns_buffered_capture_scheduler.cpp \
			image_acquisition/ns_barcode.h \
			image_acquisition/ns_image_server_alerts.cpp \
			image_acquisition/ns_usb.h \
			image_acquisition/ns_capture_schedule.cpp
src_image_base = image_base/ns_svg.h \
		 image_base/ns_vector_bitmap_interface.cpp \
		 image_base/ns_image_socket.cpp \
		 image_base/ns_jpeg.h \
		 image_base/ns_tiff.h \
		 image_base/xs_Config.h \
		 image_base/ ns_image_easy_io.h \
		 image_base/ns_libtiff_interface.c \
		 image_base/ ns_libtiff_interface.h \
		 image_base/ns_buffered_random_access_image.h \
		 image_base/ns_ojp2k.cpp \
		 image_base/ns_svg.cpp \
		 image_base/ns_image_easy_io.h.bak \
		 image_base/ns_vector_bitmap_interface.h \
		 image_base/ns_vector.h \
		 image_base/ns_image.cpp \
		 image_base/ns_jpeg.cpp \
		 image_base/ns_vector.cpp \
		 image_base/ns_image_socket.h \
		 image_base/ns_image.h \
		 image_base/ns_font.cpp \
		 image_base/ns_ojp2k.h \
		 image_base/xs_Float.h \
		 image_base/ns_font.h \
		 image_base/ns_xmp_encoder.h \
		 image_base/ns_tiff.cpp
src_image_processing = image_processing/ns_worm_detector.cpp \
		       image_processing/ns_xvid.cpp \
		       image_processing/ns_movement_visualization_generator.cpp \
		       image_processing/ns_movement_visualization_generator.h  \
		       image_processing/ns_worm_detection_constants.cpp \
		       image_processing/ns_image_tools.h \
		       image_processing/ns_worm_training_set_image.cpp \
		       image_processing/ns_worm_training_set_image.h \
		       image_processing/ns_worm_detection_constants.h \
		       image_processing/ns_spatial_avg.h \
		       image_processing/ns_svm_model_specification.h \
		       image_processing/ns_node_topology_primitives.h \
		       image_processing/ns_node_topology.h \
		       image_processing/ns_segment_topology.cpp \
		       image_processing/ns_region_growing_segmenter.h \
		       image_processing/ns_process_mask_regions.h \
		       image_processing/ns_identify_contiguous_bitmap_regions.h \
		       image_processing/ns_detected_worm_info.cpp \
		       image_processing/ns_bspline.cpp \
		       image_processing/ns_process_16_bit_images.h \ \
		       image_processing/ns_spatial_avg.cpp \
		       image_processing/ns_heat_map_interpolation.cpp \
		       image_processing/ns_xvid.h \
		       image_processing/ns_bspline.h \
		       image_processing/ns_resampler.h \
		       image_processing/ns_image_registration.h \
		       image_processing/ns_worm_detector.h \
		       image_processing/ns_difference_thresholder.cpp \
		       image_processing/ns_complex_segment_cluster_solver.h \
		       image_processing/ns_image_tools.cpp \
		       image_processing/ns_node_topology.cpp \
		       image_processing/ns_identify_contiguous_bitmap_regions.cpp \
		       image_processing/ns_detected_worm_info.h \
		       image_processing/ns_detected_object.h \
                       image_processing/ns_difference_thresholder.h_server  \
		       image_processing/ns_spine_drawer.cpp \
		       image_processing/ns_spine_drawer.h \
		       image_processing/ns_complex_segment_cluster_solver.cpp \
		       image_processing/ns_heat_map_interpolation.h \
		       image_processing/ns_segment_topology.h
src_job_scheduling =   job_scheduling/ns_processing_job_push_scheduler.h \
		       job_scheduling/ns_processing_job_pull_scheduler.h \
		       job_scheduling/ns_processing_tasks.h \
		       job_scheduling/ns_processing_job_processor.h \
		       job_scheduling/ns_processing_job_scheduler.cpp \
		       job_scheduling/ns_processing_job_scheduler.h \
                       job_scheduling/ns_processing_job.hutogen.sh \
		       job_scheduling/ns_image_processing_pipeline.cpp \
		       job_scheduling/ns_processing_job_processor.cpp \
		       job_scheduling/ns_image_processing_pipeline.h \
		       job_scheduling/ns_processing_job_push_scheduler.cpp
src_movement_analysis = movement_analysis/ns_time_path_solver.cpp \
			movement_analysis/ns_image_server_time_path_inferred_worm_aggregator.h \
			movement_analysis/ns_hidden_markov_model_posture_analyzer.cpp \
			movement_analysis/ns_time_path_solver.h \
			movement_analysis/ns_time_path_image_analyzer.h \
			movement_analysis/ns_threshold_movement_posture_analyzer.h \
			movement_analysis/ns_time_path_posture_movement_solution.h \
			movement_analysis/ns_hidden_markov_model_posture_analyzer.h \
			movement_analysis/ns_hidden_markov_model.h \
			movement_analysis/ns_time_path_image_analyzer.cpp \
src_statistics = statistics/ns_movement_measurement.h \
		 statistics/ns_survival_curve.cpp \
		 statistics/ns_lifespan_statistics.h \
		 statistics/ns_linear_regression_model.h \
		 statistics/ns_posture_analysis_models.h \
		 statistics/ns_normal_distribution.cpp \
		 statistics/ns_by_hand_lifespan.h \
		 statistics/ns_jmp_file.h \
		 statistics/ns_machine_analysis_data_loader.cpp \
		 statistics/ns_survival_curve.h \
		 statistics/ns_captured_image_statistics_set.cpp \
		 statistics/ns_movement_measurement.cpp \
		 statistics/ns_normal_distribution.h \
		 statistics/ns_machine_analysis_data_loader.h \
		 statistics/ns_movement_state.h
src_system_base = system_base/ns_dir.cpp \
	   system_base/ns_thread.h \
	   system_base/ns_xml.h \
	   system_base/ns_managed_pointer.h \
	   system_base/ns_thread.cpp \
	   system_base/ns_ex.h \
	   system_base/ns_sql.cpp \
	   system_base/ns_socket.h \
	   system_base/ns_sql.h \
	   system_base/ns_dir.h \
	   system_base/ns_ex.cpp \
	   system_base/ns_xml.cpp \
	   system_base/ns_lock.h \
	   system_base/ns_os_signal_handler.h \
	   system_base/ns_socket.cpp
src_image_server = image_server/ns_image_server_main.cpp
src_worm_browser = ../ns_worm_browser/ns_worm_browser_main.cpp \
	   ../ns_worm_browser/ns_worm_browser.cpp
src_external = ../external_libraries/libsvm/svm.cpp \
	       ../external_libraries/libsvm/svm.h \
	       ../external_libraries/ctmf/ctmf.h \
	       ../external_libraries/ctmf/ctmf.c \
	       ../external_libraries/triangle/triangle.cpp \
	       ../external_libraries/triangle/triangle.h \
	       ../external_libraries/libhungarian/hungarian.c \
	       ../external_libraries/libhungarian/hungarian.h \
	       ../external_libraries/wm4_bspline/Wm4TStringHashTable.inl \
	       ../external_libraries/wm4_bspline/Wm4Vector2.cpp \
	       ../external_libraries/wm4_bspline/Wm4TMinHeap.inl \
	       ../external_libraries/wm4_bspline/Wm4THashSet.h \
	       ../external_libraries/wm4_bspline/Wm4THashTable.inl \
	       ../external_libraries/wm4_bspline/Wm4Math.h \
	       ../external_libraries/wm4_bspline/Wm4Platforms.h \
	       ../external_libraries/wm4_bspline/Wm4IntpBSplineUniform.cpp \
	       ../external_libraries/wm4_bspline/Wm4TTuple.inl \
	       ../external_libraries/wm4_bspline/Wm4BSplineCurve2.cpp \
	       ../external_libraries/wm4_bspline/Wm4Integrate1.cpp \
	       ../external_libraries/wm4_bspline/Wm4Memory.h \
	       ../external_libraries/wm4_bspline/Wm4System.cpp \
	       ../external_libraries/wm4_bspline/Wm4System.h \
	       ../external_libraries/wm4_bspline/Wm4THashSet.inl \
	       ../external_libraries/wm4_bspline/Wm4Curve2.h \
	       ../external_libraries/wm4_bspline/Wm4SingleCurve2.h \
	       ../external_libraries/wm4_bspline/Wm4BSplineBasis.cpp \
	       ../external_libraries/wm4_bspline/Wm4BandedMatrix.inl \
	       ../external_libraries/wm4_bspline/Wm4TSmallUnorderedSet.inl  \
	       ../external_libraries/wm4_bspline/Wm4BSplineFitBasis.h \
	       ../external_libraries/wm4_bspline/Wm4IntpBSplineUniform2.h \
	       ../external_libraries/wm4_bspline/Wm4Math.inl \
	       ../external_libraries/wm4_bspline/Wm4Vector2.inl \
	       ../external_libraries/wm4_bspline/Wm4System.inl \
	       ../external_libraries/wm4_bspline/Wm4BSplineBasis.h \
	       ../external_libraries/wm4_bspline/Wm4TTuple.h \
	       ../external_libraries/wm4_bspline/Wm4BSplineCurveFit.h \
	       ../external_libraries/wm4_bspline/Wm4BandedMatrix.h \
	       ../external_libraries/wm4_bspline/Wm4Math.cpp \
	       ../external_libraries/wm4_bspline/Wm4FoundationPCH.cpp \
	       ../external_libraries/wm4_bspline/Wm4Memory.cpp \
	       ../external_libraries/wm4_bspline/Wm4FoundationPCH.h \
	       ../external_libraries/wm4_bspline/Wm4THashTable.h \
	       ../external_libraries/wm4_bspline/Wm4IntpBSplineUniform.h \
	       ../external_libraries/wm4_bspline/Wm4BSplineCurveFit.cpp \
	       ../external_libraries/wm4_bspline/Wm4BSplineCurve2.h \
	       ../external_libraries/wm4_bspline/Wm4FoundationLIB.h \
	       ../external_libraries/wm4_bspline/Wm4Memory.inl \
	       ../external_libraries/wm4_bspline/Wm4IntpBSplineUniform2.cpp \
	       ../external_libraries/wm4_bspline/Wm4SingleCurve2.cpp \
	       ../external_libraries/wm4_bspline/Wm4Integrate1.h \
	       ../external_libraries/wm4_bspline/Wm4Curve2.cpp \
	       ../external_libraries/wm4_bspline/Wm4Vector2.h \
	       ../external_libraries/wm4_bspline/Wm4TSmallUnorderedSet.h \
	       ../external_libraries/wm4_bspline/Wm4MathMCR.h \
	       ../external_libraries/wm4_bspline/Wm4TStringHashTable.h \
	       ../external_libraries/wm4_bspline/Wm4Command.h \
	       ../external_libraries/wm4_bspline/Wm4BSplineFitBasis.cpp \
	       ../external_libraries/wm4_bspline/Wm4Command.cpp \
	       ../external_libraries/wm4_bspline/Wm4TMinHeap.h \
	       ../external_libraries/tinyxml/tinystr.cpp \
	       ../external_libraries/tinyxml/tinustr.h \
	       ../external_libraries/tinyxml/tinyxml.cpp \
	       ../external_libraries/tinyxml/tinyxml.h \
	       ../external_libraries/tinyxml/tinyxmlerror.cpp \
	       ../external_libraries/tinyxml/tinyxmlparser.cpp
include_dir_external = -I../external_libraries/libsvm \
	       -I../external_libraries/ctmf \
	       -I../external_libraries/triangle \
	       -I../external_libraries/libhungarian \
	       -I../external_libraries/wm4_bspline \
	       -I../external_libraries/tinyxml \
	       -I../external_libraries/libtiff-proc

DEF_FONT = $(pkgdatadir)/default_font.ttf
INI_PATH = $(sysconfdir)/ns_image_server.ini

PRE_DEF = -DTRILIBRARY -DNO_TIMER -DANSI_DECLARATORS -DNS_DEFAULT_FONT="\"$(DEF_FONT)\"" -DNS_INI_PATH="\"$(INI_PATH)\""
bin_PROGRAMS = ns_image_server
#serverdir = @datarootdir@
dist_pkgdata_DATA = ../files/default_font.ttf

if BUILD_BROWSER
bin_PROGRAMS += ns_worm_browser
dist_pkgdata_DATA += ../windows_build/occupied_image.tif ../windows_build/start.tif
PRE_DEF += -DNS_DATA_PATH="\"$(pkgdatadir)/\""
if TARGET_OSX
all-local: ns_worm_browser.app
_ns_worm_browser: ns_worm_browser$(EXEEXT)
	cp ns_worm_browser$(EXEEXT) _ns_worm_browser
_ns_worm_browser.app: _ns_worm_browser
	$(FLTK_CONFIG) --post _ns_worm_browser
ns_worm_browser.app: _ns_worm_browser.app clear_browser_app
	mv _ns_worm_browser.app ns_worm_browser.app
	rm _ns_worm_browser
clear_browser_app:
	rm -rf ns_worm_browser.app
clean-local:  clear_browser_app
# TODO: this .app bundle can only be used on the system it's built on:
# there are resource files and non-standard libraries in /usr/local. 
# A proper fix would be to bundle these in the .app.
# TODO: Figure out how best to distribute ns_image_server for the mac?
endif
endif

AM_CPPFLAGS = -Iimage_server -Istatistics -Isystem_base \
			   -Imovement_analysis -Ijob_scheduling \
			   -Iimage_processing -Iimage_base \
			   -Iimage_acquisition -Idata_annotation \
			   $(include_dir_external) \
			   -O3 \
			   $(MYSQL_CFLAGS) \
			   -I/usr/include/mysql -I/usr/local/include/mysql -I /usr/mysql \
			   -I/usr/include/freetype2 -I/usr/local/include/freetype2 -I/usr/freetype2 \
			   $(PRE_DEF) \
			   $(DEPS_CFLAGS) 
AM_CXXFLAGS = -g $(NS_CXXFLAGS)	
AM_CFLAGS = -O3 -pthread

AM_LDFLAGS=$(MYSQL_LDFLAGS) $(DEPS_LIBS) -lpthread $(NS_LDFLAGS)

src_common = $(src_base) $(src_data_annotation) $(src_image_acquisition) \
	   $(src_image_base) $(src_image_processing) $(src_job_scheduling) \
	   $(src_movement_analysis) $(src_statistics) $(src_system_base) \
	   $(src_external)

ns_image_server_SOURCES = $(src_common) $(src_image_server)

ns_worm_browser_SOURCES = $(src_common) $(src_worm_browser)
ns_worm_browser_LDFLAGS = $(AM_LDFLAGS) $(FLTK_LDFLAGS)
ns_worm_browser_CPPFLAGS = $(AM_CPPFLAGS) -I$(FLTK_INCLUDEDIR)
